--- a/src/main/webapp/WEB-INF/view/helloWorld.html
+++ b/src/main/webapp/WEB-INF/view/helloWorld.html
@@ -5,8 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div>
-    <h2>Hello World yeyeyeyeyeyeyeyeyeye!</h2>
-</div>
+<h2>Hello World Too!</h2>
 </body>
 </html>
